--- a/Projetos/01-/estilo/style.css
+++ b/Projetos/01-/estilo/style.css
@@ -1,5 +1,100 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Signika:wght@500&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
+
+:root {
+    --cor0: #fafafa;
+    --cor1: #4D4D4D;
+    --cor2: #000000;
+    --cor3: #333333;
+    --cor4: #141414;
+    --cor5: #462106;
+    --cor6: #b1b1b1;
+
+    --fonte-padrão: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque: 'Signika', sans-serif;
+    --fonte-ios: 'Archivo Black', sans-serif;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+} 
+
 body {
-background-color: #D4D4D4;
+    background-color: var(--cor0);
+    font-family: var(--fonte-padrão);
+}
+
+header {
+    background-image: linear-gradient(to top, var(--cor2), var(--cor6));
+    min-height: 150px;
+    text-align: center;
+    padding-top: 50px;
+}
+
+header > h1 {
+    color: var(--cor0);
+    font-family: var(--fonte-destaque);
+    font-size: 3em;
+    margin-bottom: 20px;
+    text-shadow: 2px 4px 4px black;
+}
+
+header > p {
+    color: var(--cor0);
+    font-family: var(--fonte-padrão);
+    font-size: 1.2em;
+    max-width: 600px;
+    margin: auto;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+nav {
+    background-color: var(--cor2);
+    padding: 10px;
+    
+}
+
+.colorido {
+    background: linear-gradient(to bottom,
+     #61BB46, #FEB827, #E13A3E, #963D96, #009DDD);
+
+    background-size: 400% 100%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+main {
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0px 0px 10px #0000005f;
+    border-radius: 0px 10px 0px 10px;
+}
+
+main img {
+    width: 35%;
+    display: block;
+    margin: auto;
+}
+
+main > article >  h1 {
+    color: var(--cor4);
+    font-family: var(--fonte-ios);
+}
+
+main > article >  h2 {
+    color: var(--cor1);
+    font-family: var(--fonte-ios);
+}
+
+footer {
+    background-color: var(--cor2);
 }
