--- a/Projetos/01-/estilo/style.css
+++ b/Projetos/01-/estilo/style.css
@@ -5,13 +5,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 
 :root {
-    --cor0: #fafafa;
-    --cor1: #4D4D4D;
+    --cor0: #F5F5F7;
+    --cor1: #6E6E73;
     --cor2: #000000;
     --cor3: #333333;
     --cor4: #141414;
     --cor5: #462106;
     --cor6: #b1b1b1;
+    --cor7: #6E6E73;
 
     --fonte-padrão: Arial, Verdana, Helvetica, sans-serif;
     --fonte-destaque: 'Signika', sans-serif;
@@ -24,13 +25,13 @@
 } 
 
 body {
-    background-color: var(--cor0);
+    background-color: var(--cor6);
     font-family: var(--fonte-padrão);
 }
 
 header {
-    background-image: linear-gradient(to top, var(--cor2), var(--cor6));
-    min-height: 150px;
+    background-image: linear-gradient(to top, var(--cor2), var(--cor1));
+    min-height: 200px;
     text-align: center;
     padding-top: 50px;
 }
@@ -45,6 +46,7 @@ header > h1 {
 
 header > p {
     color: var(--cor0);
+    text-shadow: 2px 4px 4px #000000;
     font-family: var(--fonte-padrão);
     font-size: 1.2em;
     max-width: 600px;
@@ -57,6 +59,20 @@ nav {
     background-color: var(--cor2);
     padding: 10px;
     
+}
+
+nav > a {
+    color: white;
+    text-decoration: none;  
+    padding: 10px;
+    font-weight: bold;
+    border-radius: 5px;
+    transition-duration: 0.5s;
+}
+
+nav > a:hover {
+    background-color: var(--cor6);
+    color: var(--cor3);    
 }
 
 .colorido {
@@ -74,13 +90,13 @@ main {
     margin: auto;
     margin-bottom: 30px;
     padding: 20px;
-    background-color: white;
+    background-color: var(--cor0);
     box-shadow: 0px 0px 10px #0000005f;
-    border-radius: 0px 10px 0px 10px;
+    border-radius: 0px 0px 10px 10px;
 }
 
 main img {
-    width: 35%;
+    max-width: 350px;
     display: block;
     margin: auto;
 }
@@ -88,11 +104,35 @@ main img {
 main > article >  h1 {
     color: var(--cor4);
     font-family: var(--fonte-ios);
+    font-size: 2em;
 }
 
 main > article >  h2 {
     color: var(--cor1);
     font-family: var(--fonte-ios);
+}
+
+main p {
+    margin: 15px 0px;
+    text-align: justify;
+    text-indent: 15px;
+    font-size: 1.1em;
+    line-height: 2em;
+}
+
+main a {
+    font-weight: bolder;
+    color: var(--cor3);
+    text-decoration: none;
+    font-style: italic;
+}
+
+main a:hover {
+    color: blue;
+}
+
+main strong {
+    color: var(--cor5);
 }
 
 footer {
