--- a/Portfólio/style.css
+++ b/Portfólio/style.css
@@ -8,13 +8,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Signika:wght@500&display=swap');
 
-    :root {
+:root {
     --cinza-escuro: #333333;
     --cinza-claro: #b1b1b1;
+    --linkedin: #0B66C3;
+    --instagram: #F5008C;
+    --roxo: #963EC6;
 
 
     --fonte-padrão: Arial, Verdana, Helvetica, sans-serif;
-    --fonte-destaque:'Open Sans', sans-serif;
+    --fonte-destaque: 'Open Sans', sans-serif;
     --fonte-perspadrao: 'Roboto', sans-serif;
 }
 
@@ -35,7 +38,7 @@ body {
     margin: 20px 0px;
 }
 
-.titulo{
+.titulo {
     color: white;
     font-size: 30px;
     font-family: var(--fonte-perspadrao);
@@ -43,7 +46,7 @@ body {
 }
 
 .titulo span {
-    color: #8a2be2;
+    color: var(--roxo);
 }
 
 
@@ -52,29 +55,35 @@ body {
 .superior {
     max-width: 1280px;
     margin: auto;
-    padding: 30px;
     font-family: var(--fonte-perspadrao);
     font-weight: bolder;
 }
 
-header > .superior {
+header>.superior {
+    background-color: #0e0012;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 15px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    z-index: 1;
 }
 
-.menu > a {
+.menu>a {
     color: #cdcdcd;
     font-family: var(--fonte-perspadrao);
-    text-decoration: none;  
+    text-decoration: none;
     padding: 10px 20px;
     font-weight: normal;
     border-radius: 5px;
     transition-duration: 0.5s;
 }
 
-.menu > a:hover {
-    background-color: #8a2be2;
+.menu>a:hover {
+    background-color: var(--roxo);
     color: white;
     display: inline-block;
     transform: scale(1.05);
@@ -86,7 +95,7 @@ header > .superior {
     font-size: 17px;
     font-family: var(--fonte-perspadrao);
     color: white;
-    background-color: blueviolet;
+    background-color: var(--roxo);
     border: 0;
     border-radius: 50px;
     cursor: pointer;
@@ -103,10 +112,11 @@ header > .superior {
 /* ESTILO DA MAIN */
 
 .cont-principal {
-    padding: 40px 4%;
+    padding: 90px 4%;
+    margin-top: 50px;
 }
 
-.cont-principal .flex{
+.cont-principal .flex {
     align-items: center;
     justify-content: center;
     gap: 90px;
@@ -118,53 +128,56 @@ header > .superior {
     font-family: var(--fonte-destaque);
     font-size: 30px;
     font-weight: bolder;
-    line-height: 30px;
+    line-height: 40px;
     /* linhas grudadas */
 }
 
-.cont-principal h1 span{
-    color: #8a2be2;
-    font-size: 80px;
+.cont-principal h1 span {
+    color: var(--roxo);
+    font-size: 35px;
 }
 
-.cont-principal p{
+.cont-principal p {
     color: white;
     font-family: var(--fonte-perspadrao);
     margin: 40px 0px;
     line-height: 25px;
     font-weight: normal;
+    text-align: justify;
 }
 
-.cont-principal p em{
+.cont-principal p em {
     line-height: 50px;
 }
 
 .cont-principal .img-flut img {
     position: relative;
-    animation: flutuar 2s 
-    ease-in-out 
-    infinite 
-    alternate;
+    animation: flutuar 2s ease-in-out infinite alternate;
 }
 
 @keyframes flutuar {
-    0%{top: 0;}
-    100% {top: 20px;}
+    0% {
+        top: 0;
+    }
+
+    100% {
+        top: 20px;
+    }
 }
 
 
 /* ESTILOS DAS ESPECIALIDADES */
 
-.especialidades{
-    padding: 40px 4%;
+.especialidades {
+    padding: 90px 4%;
 }
 
-.especialidades .flex{
+.especialidades .flex {
     gap: 50px;
 }
 
-.especialidades h3{
-    font-family: var(--fonte-padrão);
+.especialidades h3 {
+    font-family: var(--fonte-destaque);
     font-size: 1.7em;
     margin: 15px 0px;
     margin-top: 10px;
@@ -184,7 +197,149 @@ header > .superior {
     box-shadow: 0 0 10px #cd98fe9c;
 }
 
-.especialidades .esp-box i{
+.especialidades .esp-box i {
     font-size: 50px;
-    color: #8a2be2;
+    color: var(--roxo);
+}
+
+
+/* ESTILOS SOBRE MIM */
+
+.sobre-mim {
+    padding: 50px 4%;
+}
+
+.sobre-mim .flex {
+    align-items: center;
+    gap: 90px;
+}
+
+.txt-sobre h2 {
+    color: white;
+    font-size: 1.9em;
+    margin: 15px 0px;
+    font-family: var(--fonte-destaque);
+    line-height: 35px;
+    /* distância entre uma linha e outra */
+    margin-bottom: 20px;
+}
+
+.txt-sobre h2 span {
+    color: var(--roxo);
+    display: block;
+}
+
+.txt-sobre p {
+    font-weight: normal;
+    font-family: var(--fonte-perspadrao);
+    color: white;
+    text-align: justify;
+    font-family: var(--fonte-perspadrao);
+    line-height: 22px;
+}
+
+.redes-sociais button {
+    font-size: 35px;
+    background-color: black;
+    border: none;
+    padding: 10px;
+    margin: 40px 5px 0px 0px;
+    cursor: pointer;
+}
+
+.redes-sociais button:hover {
+    display: inline-block;
+    transform: scale(1.2);
+    transition-duration: 0.3s;
+    border-radius: 50px;
+    box-shadow: 0 0 15px #be8aeece;
+}
+
+.redes-sociais button.git {
+    color: white;
+}
+
+.redes-sociais button.inst {
+    color: #F5008C;
+}
+
+.redes-sociais button.lkdn {
+    color: #0B66C3;
+}
+
+@media screen and (max-width: 1000px) {
+
+    /* config geral */
+    .flex {
+        flex-direction: column;
+        /* qual a posição dos elementos */
+    }
+
+
+    /* header */
+    .menu,
+    .contato {
+        display: none;
+    }
+
+
+    /* conteúdos destaque */
+    .cont-principal {
+        padding: 30px 4%;
+        margin-top: 50px;
+    }
+
+    .cont-principal h1 {
+        font-size: 25px;
+    }
+
+    .cont-principal h1 span {
+        color: var(--roxo);
+        font-size: 30px;
+    }
+
+    .cont-principal .img-flut img {
+        width: 100%;
+    }
+
+    .cont-principal .flex {
+        gap: 20px;
+    }
+
+
+    /* especialidades */
+    .especialidades {
+        padding: 100px 4%;
+    }
+
+    .especialidades .esp-box {
+        padding: 30px;
+        margin: 15px;
+    }
+
+    .especialidades .esp-box i {
+        font-size: 35px;
+    }
+
+
+    /* SOBRE MIM */
+
+    .sobre-mim {
+        padding: 15px;
+    }
+
+    .txt-sobre h2 {
+        font-size: 25px;
+        line-height: 28px;
+    }
+
+    .redes-sociais {
+        text-align: center;
+    }
+
+    .sobre-mim .img-sobre{
+        width: 100%;
+        margin-bottom: -30px;
+        text-align: center;
+    }
 }
