--- a/Portfólio/style.css
+++ b/Portfólio/style.css
@@ -54,14 +54,15 @@ body {
 /* ESTILO DO HEADER */
 
 .superior {
-    max-width: 1280px;
+    max-width: 100%;
     margin: auto;
     font-family: var(--fonte-perspadrao);
     font-weight: bolder;
 }
 
 header>.superior {
-    background-color: #0e0012;
+    background: linear-gradient(to bottom,
+    #471d5e, black);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -69,22 +70,19 @@ header>.superior {
     position: fixed;
     top: 0;
     right: 0;
-    width: 100%;
+    min-width: 100%;
     z-index: 1;
 }
 
-/* .superior .logo {
-    padding: 10px;
-} */
-
-.menu>a {
+.menu> a {
     color: #cdcdcd;
     font-family: var(--fonte-perspadrao);
     text-decoration: none;
-    padding: 10px 20px;
+    padding: 15px 20px;
     font-weight: normal;
-    border-radius: 5px;
+    border-radius: 25px;
     transition-duration: 0.5s;
+    margin: 0px 5px;
 }
 
 .menu>a:hover {
@@ -93,6 +91,7 @@ header>.superior {
     display: inline-block;
     transform: scale(1.05);
     /* cresce quando passa em cima */
+    box-shadow: 0px 0px 8px #be8aee;
 }
 
 .contato button {
@@ -192,7 +191,7 @@ header>.superior {
     color: white;
     padding: 40px;
     font-weight: normal;
-    margin-top: 5px;
+    margin: 5px 5px 0px 5px;
     border-radius: 20px;
     transition-duration: 0.5s;
 }
@@ -217,7 +216,7 @@ header>.superior {
 /* ESTILOS SOBRE MIM */
 
 .sobre-mim {
-    padding: 50px 4%;
+    padding: 50px;
 }
 
 .sobre-mim .flex {
@@ -251,7 +250,6 @@ header>.superior {
 
 .redes-sociais a {
     text-decoration: none;
-
 }
 
 .redes-sociais button {
@@ -283,7 +281,7 @@ header>.superior {
     color: #0B66C3;
 }
 
-@media screen and (max-width: 1000px) {
+@media(max-width: 1000px) {
 
     /* config geral */
     .flex {
@@ -297,7 +295,6 @@ header>.superior {
     .contato {
         display: none;
     }
-
 
     /* conteúdos destaque */
     .cont-principal {
@@ -331,13 +328,14 @@ header>.superior {
 
     .especialidades h2 {
         margin: 10px 0px -18px 0px;
-        padding: 5px;
+        padding: 2%;
         font-weight: normal;
     }
 
     .especialidades .esp-box {
-        padding: 20px;
-        margin: 5px;
+        padding: 10%;
+        margin: 2%;
+        box-shadow: 0 0 10px #cd98fe9c;
     }
 
     .especialidades .esp-box i {
@@ -348,19 +346,20 @@ header>.superior {
     /* sobre mim */
 
     .sobre-mim {
-        padding: 40px;
+        padding: 10%;
         margin: -60px 0px -15px 0px;
     }
 
     .txt-sobre h2 {
         font-size: 25px;
         line-height: 29px;
-        margin-bottom: 40px;
+        margin-bottom: 10%;
     }
 
     .redes-sociais button {
-        padding: 10px;
-        margin: 60px 15px 0px 15px;
+        background-color: #0B66C3;
+        padding: 3%;
+        margin: 10% 3.5% 1% 3.5%;
     }
 
     .sobre-mim .img-sobre{
